--- a/server3/nginx/src/index.html
+++ b/server3/nginx/src/index.html
@@ -34,7 +34,7 @@
 <div class="container">
     <h1>Coffee house</h1><br>
     <a href="/catalogue.php">Menu</a>
-    <a href="/admin.php">Sign In to admin panel</a>
+    <a href="/admin/admin.php">Sign In to admin panel</a>
     <a href="/about.html">About us</a>
 </div>
 </body>
